--- a/infra/requirements.txt
+++ b/infra/requirements.txt
@@ -1,5 +1,5 @@
-torch==1.6.0
-torchvision==0.7.0
+torch==1.7.1+cu110
+torchvision==0.8.2+cu110
 tensorboard
 matplotlib
 git+https://github.com/tinyobjloader/tinyobjloader.git#subdirectory=python
@@ -14,3 +14,4 @@ moviepy
 opencv-python
 plyfile
 polyscope
+pysdf
